-
Bug
-
-
Major
-
Resolution:
Fixed
-
10.3(EOL), 10.4(EOL), 10.5, 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11
-
-
-
invalid ssl setup aborts bootstrap
- is caused by
-
MDEV-29811
server advertises ssl even if it's unusable
-
-
Closed
{"report":{"fcp":759.4000000953674,"ttfb":192.10000014305115,"pageVisibility":"visible","entityId":120016,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"bb4b56ff-3b34-4e50-b439-1e1feba6c190","navigationType":0,"readyForUser":811.7000000476837,"redirectCount":0,"resourceLoadedEnd":652.1000001430511,"resourceLoadedStart":197.30000019073486,"resourceTiming":[{"duration":46.299999952316284,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":197.30000019073486,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":197.30000019073486,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":243.60000014305115,"responseStart":0,"secureConnectionStart":0},{"duration":46.200000047683716,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":197.5,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":197.5,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":243.70000004768372,"responseStart":0,"secureConnectionStart":0},{"duration":102.70000004768372,"initiatorType":"script","name":"https://jira.mariadb.org/s/fbf975c0cce4b1abf04784eeae9ba1f4-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":197.70000004768372,"connectEnd":197.70000004768372,"connectStart":197.70000004768372,"domainLookupEnd":197.70000004768372,"domainLookupStart":197.70000004768372,"fetchStart":197.70000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":197.70000004768372,"responseEnd":300.40000009536743,"responseStart":300.40000009536743,"secureConnectionStart":197.70000004768372},{"duration":175.20000004768372,"initiatorType":"script","name":"https://jira.mariadb.org/s/099b33461394b8015fc36c0a4b96e19f-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":197.70000004768372,"connectEnd":197.70000004768372,"connectStart":197.70000004768372,"domainLookupEnd":197.70000004768372,"domainLookupStart":197.70000004768372,"fetchStart":197.70000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":197.70000004768372,"responseEnd":372.90000009536743,"responseStart":372.90000009536743,"secureConnectionStart":197.70000004768372},{"duration":178.69999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/s/94c15bff32baef80f4096a08aceae8bc-CDN/lu2bu7/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":197.80000019073486,"connectEnd":197.80000019073486,"connectStart":197.80000019073486,"domainLookupEnd":197.80000019073486,"domainLookupStart":197.80000019073486,"fetchStart":197.80000019073486,"redirectEnd":0,"redirectStart":0,"requestStart":197.80000019073486,"responseEnd":376.5,"responseStart":376.5,"secureConnectionStart":197.80000019073486},{"duration":179,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":197.90000009536743,"connectEnd":197.90000009536743,"connectStart":197.90000009536743,"domainLookupEnd":197.90000009536743,"domainLookupStart":197.90000009536743,"fetchStart":197.90000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":197.90000009536743,"responseEnd":376.90000009536743,"responseStart":376.90000009536743,"secureConnectionStart":197.90000009536743},{"duration":179.30000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":198,"connectEnd":198,"connectStart":198,"domainLookupEnd":198,"domainLookupStart":198,"fetchStart":198,"redirectEnd":0,"redirectStart":0,"requestStart":198,"responseEnd":377.30000019073486,"responseStart":377.30000019073486,"secureConnectionStart":198},{"duration":179.59999990463257,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2bu7/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":198.10000014305115,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":198.10000014305115,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":377.7000000476837,"responseStart":0,"secureConnectionStart":0},{"duration":179.5,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":198.20000004768372,"connectEnd":198.20000004768372,"connectStart":198.20000004768372,"domainLookupEnd":198.20000004768372,"domainLookupStart":198.20000004768372,"fetchStart":198.20000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":198.20000004768372,"responseEnd":377.7000000476837,"responseStart":377.7000000476837,"secureConnectionStart":198.20000004768372},{"duration":179.79999995231628,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":198.30000019073486,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":198.30000019073486,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":378.10000014305115,"responseStart":0,"secureConnectionStart":0},{"duration":179.90000009536743,"initiatorType":"script","name":"https://jira.mariadb.org/s/3339d87fa2538a859872f2df449bf8d0-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":198.40000009536743,"connectEnd":198.40000009536743,"connectStart":198.40000009536743,"domainLookupEnd":198.40000009536743,"domainLookupStart":198.40000009536743,"fetchStart":198.40000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":198.40000009536743,"responseEnd":378.30000019073486,"responseStart":378.30000019073486,"secureConnectionStart":198.40000009536743},{"duration":399.39999985694885,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":199.10000014305115,"connectEnd":199.10000014305115,"connectStart":199.10000014305115,"domainLookupEnd":199.10000014305115,"domainLookupStart":199.10000014305115,"fetchStart":199.10000014305115,"redirectEnd":0,"redirectStart":0,"requestStart":199.10000014305115,"responseEnd":598.5,"responseStart":598.5,"secureConnectionStart":199.10000014305115},{"duration":452.90000009536743,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":199.20000004768372,"connectEnd":199.20000004768372,"connectStart":199.20000004768372,"domainLookupEnd":199.20000004768372,"domainLookupStart":199.20000004768372,"fetchStart":199.20000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":199.20000004768372,"responseEnd":652.1000001430511,"responseStart":652.1000001430511,"secureConnectionStart":199.20000004768372},{"duration":116.20000004768372,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":514.6000001430511,"connectEnd":514.6000001430511,"connectStart":514.6000001430511,"domainLookupEnd":514.6000001430511,"domainLookupStart":514.6000001430511,"fetchStart":514.6000001430511,"redirectEnd":0,"redirectStart":0,"requestStart":514.6000001430511,"responseEnd":630.8000001907349,"responseStart":630.8000001907349,"secureConnectionStart":514.6000001430511},{"duration":175.70000004768372,"initiatorType":"link","name":"https://jira.mariadb.org/s/d5715adaadd168a9002b108b2b039b50-CDN/lu2bu7/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/css/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":706.9000000953674,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":706.9000000953674,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":882.6000001430511,"responseStart":0,"secureConnectionStart":0},{"duration":175.29999995231628,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/e65b778d185daf5aee24936755b43da6/_/download/contextbatch/js/browser-metrics-plugin.contrib,-_super,-project.issue.navigator,-jira.view.issue,-atl.general/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":707.7000000476837,"connectEnd":707.7000000476837,"connectStart":707.7000000476837,"domainLookupEnd":707.7000000476837,"domainLookupStart":707.7000000476837,"fetchStart":707.7000000476837,"redirectEnd":0,"redirectStart":0,"requestStart":707.7000000476837,"responseEnd":883,"responseStart":883,"secureConnectionStart":707.7000000476837},{"duration":179.09999990463257,"initiatorType":"script","name":"https://jira.mariadb.org/s/f51ef5507eea4c158f257c66c93b2a3f-CDN/lu2bu7/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/js/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":708.1000001430511,"connectEnd":708.1000001430511,"connectStart":708.1000001430511,"domainLookupEnd":708.1000001430511,"domainLookupStart":708.1000001430511,"fetchStart":708.1000001430511,"redirectEnd":0,"redirectStart":0,"requestStart":708.1000001430511,"responseEnd":887.2000000476837,"responseStart":887.2000000476837,"secureConnectionStart":708.1000001430511},{"duration":163.60000014305115,"initiatorType":"script","name":"https://www.google-analytics.com/analytics.js","startTime":737.2000000476837,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":737.2000000476837,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":900.8000001907349,"responseStart":0,"secureConnectionStart":0}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":63,"responseStart":193,"responseEnd":194,"domLoading":196,"domInteractive":866,"domContentLoadedEventStart":867,"domContentLoadedEventEnd":898,"domComplete":1697,"loadEventStart":1697,"loadEventEnd":1699,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":841.2000000476837},{"name":"bigPipe.sidebar-id.end","time":842},{"name":"bigPipe.activity-panel-pipe-id.start","time":842.2000000476837},{"name":"bigPipe.activity-panel-pipe-id.end","time":844.6000001430511},{"name":"activityTabFullyLoaded","time":905.8000001907349}],"measures":[],"correlationId":"4359360c239fb5","effectiveType":"4g","downlink":9.1,"rtt":0,"serverDuration":79,"dbReadsTimeInMs":13,"dbConnsTimeInMs":20,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}