MDEV-30818 invalid ssl prevents bootstrap

in bootstrap the server reads stdin and does not listen to network.
it won't use ssl anyway