sql/mysqld.cc
@@ -5026,7 +5026,10 @@ static void init_ssl()
     {
       sql_print_error("Failed to setup SSL");
       sql_print_error("SSL error: %s", sslGetErrString(error));
-      unireg_abort(1);
+      if (!opt_bootstrap)
+        unireg_abort(1);
+      opt_use_ssl = 0;
+      have_ssl= SHOW_OPTION_DISABLED;
     }
     if (global_system_variables.log_warnings > 0)
     {
